Simplify `ThirdPartyLibrary#isKnownClass` implementation